--- a/messages.yml
+++ b/messages.yml
@@ -11,4 +11,4 @@ settingChanged: "&b&l{CustomWings} &3Setting changed"
 noWingToPreview: "&b&l{CustomWings} &3Equip a wing to preview it"
 typeSettingInChat: "&b&l{CustomWings} &3Please type the setting in chat"
 selectSettingMaterial: "&b&l{CustomWings} &3Please click the item in your inventory"
-reloadSucces: "&b&l{CustomWings} &3CustoWings has been reloaded"
+reloadSucces: "&b&l{CustomWings} &3CustomWings has been reloaded"
