last commit is not true

--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,8 @@
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>LATEST</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/craftbukkit-1.15.2.jar</systemPath>
+            <scope>provided</scope>
+            <systemPath>${project.basedir}/src/lib/craftbukkit-1.15.2.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
