--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ main: tigeax.customwings.main.CustomWings
 author: Tigeax
 version: ${pom.version}
 api-version: 1.13
+softdepend:
+  - TokenManager
 commands:
   wings:
     aliases: [w]
