--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tigeax.customwings</groupId>
     <artifactId>CustomWings</artifactId>
-    <version>pre3.4.3-better</version>
+    <version>pre2-3.4.3-better</version>
     <packaging>jar</packaging>
 
     <name>CustomWings</name>
