--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -5,6 +5,7 @@ wingSelected: "&b&l{CustomWings} &3You have equiped the {WINGNAME} &3wing"
 seeOtherPlayersWingsON: "&b&l{CustomWings} &3Other players wings are now hidden for you"
 seeOtherPlayersWingsOFF: "&b&l{CustomWings} &3You can now see other players wings"
 missingArgumentsSetwing: "&b&l{CustomWings} &cMissing arguments, use /wings setwing [player] [wingID]"
+missingArgumentsTakeAwayWing: "&b&l{CustomWings} &cMissing arguments, use /wings takeaway [player] [wingID]"
 notAPlayerError: "&b&l{CustomWings} &cOnly players can execute this command!"
 invalidPlayerError: "&b&l{CustomWings} &cPlayer {PLAYERNAME} &cnot found!"
 setWingCommandWingSet: "&b&l{CustomWings} &bPlayer {PLAYERNAME} &bwing set to {WINGNAME}"
@@ -13,3 +14,5 @@ noWingToPreview: "&b&l{CustomWings} &3Equip a wing to preview it"
 typeSettingInChat: "&b&l{CustomWings} &3Please type the setting in chat"
 selectSettingMaterial: "&b&l{CustomWings} &3Please click the item in your inventory"
 reloadSucces: "&b&l{CustomWings} &3CustomWings has been reloaded"
+invalidWingsError: "&b&l{CustomWings} &c{WINGNAME} not found"
+wingsRemoved: "&b&l{CustomWings} &3{PLAYERNAME} had access to {WINGNAME} removed."
