--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -10,6 +10,7 @@ notAPlayerError: "&b&l{CustomWings} &cOnly players can execute this command!"
 invalidPlayerError: "&b&l{CustomWings} &cPlayer {PLAYERNAME} &cnot found!"
 setWingCommandWingSet: "&b&l{CustomWings} &bPlayer {PLAYERNAME} &bwing set to {WINGNAME}"
 settingChanged: "&b&l{CustomWings} &3Setting changed"
+settingCanceled: "&b&l{CustomWings} &cSetting change canceled"
 noWingToPreview: "&b&l{CustomWings} &3Equip a wing to preview it"
 typeSettingInChat: "&b&l{CustomWings} &3Please type the setting in chat"
 selectSettingMaterial: "&b&l{CustomWings} &3Please click the item in your inventory"
