--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@
 wingViewDistance: 30
 
 #All data of the Main gui
+#Changing size and/or slot numbers is your call. It might break if you do it wrong.
 mainGUI:
   name: "&c&lWing selector"
   size: 54
@@ -17,6 +18,33 @@ mainGUI:
     materialON: GREEN_STAINED_GLASS
     materialOFF: RED_STAINED_GLASS
     slot: 52
+
+  navigationItem:
+    next:
+      name: "&9Next Page"
+      material: FEATHER
+      slot: 50
+    back:
+      name: "&9Previous Page"
+      material: FEATHER
+      slot: 49
+
+  filterItem:
+    slot: 45
+    noFilter:
+      name: "&fNo filter"
+      lore: []
+      material: BARRIER
+    ownedWings:
+      name: "&aOwned wings"
+      lore:
+        - "&7Show only the wings you can use."
+      material: LIME_CONCRETE
+    unownedWings:
+      name: "&cUnowned wings"
+      lore:
+        - "&7Show only the wings you cannot use."
+      material: RED_CONCRETE
     
 #Data for the Editor gui
 editorGUI:
