--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,31 +1,44 @@
-#The distance players have to be within to see each others wings
+# To configure wing or add you own wings, edit or add the files in the 'wings' folder.
+
+# The main command of the plugin
+commandName: "customwings"
+commandAliases:
+  - "wings"
+  - "cw"
+  - "w"
+
+# The distance players have to be within to see each others wings.
 wingViewDistance: 30
 
-#Maximum pitch at which wings will render for the player to allow them to look down without obstructing vision
-#Value can range from 90 to -90 where 90 is looking down and -90 is looking up
-wingMaxPitch: 90
+# Maximum pitch at which wings will render for the player to allow them to look down without obstructing vision.
+# Value can range from 90 to -90, where 90 is looking straight down and -90 is looking straight up (same as in minecraft's F3 info screen).
+wingMaxPitch: 70
 
-#Should wings be hidden when player has invisibility effect
+# Should wings be hidden when player has invisibility effect.
 invisibilityPotionHidesWing: true
 
-#All data of the Main gui
-#Changing size and/or slot numbers is your call. It might break if you do it wrong.
-mainGUI:
+# Settings for the wing selector menu.
+# Remeber slot numbers start at 0.
+wingSelectMenu:
   name: "&c&lWing selector"
-  size: 54
-  
+  size: 54 # Must be a multiple of 9.
+  pages: 1
+
+  # Item plaeyrs can use to not equip any wing.
   removeWingItem:
     name: "&4Remove Wing"
     material: BARRIER
     slot: 53
-    
+
+  # Item players can use to toggle if they want to see other player wings.
   hideWingsToggleItem:
-    nameON: "&4Hide player wings"
-    nameOFF: "&5Show player wings"
-    materialON: GREEN_STAINED_GLASS
-    materialOFF: RED_STAINED_GLASS
+    nameON: "&5Show player wings"
+    materialON: RED_STAINED_GLASS
+    nameOFF: "&4Hide player wings"
+    materialOFF: GREEN_STAINED_GLASS
     slot: 52
 
+  # If pages is bigger then 1, it will show the navigation items.
   navigationItem:
     next:
       name: "&9Next Page"
@@ -36,29 +49,22 @@ mainGUI:
       material: FEATHER
       slot: 49
 
+  # Allow player to hide wings in the gui that they own/don't own.
   filterItem:
+    enable: true
     slot: 45
     noFilter:
-      name: "&fNo filter"
-      lore: []
+      name: "&fCurrent filter: No filter"
       material: BARRIER
+      lore:
+        - "&7Show all wings"
     ownedWings:
       name: "&aOwned wings"
-      lore:
-        - "&7Show only the wings you can use."
       material: LIME_WOOL
+      lore:
+        - "&7Current filter: Show only the wings you can use"
     unownedWings:
       name: "&cUnowned wings"
-      lore:
-        - "&7Show only the wings you cannot use."
       material: RED_WOOL
-    
-#Data for the Editor gui
-editorGUI:
-  name: "&c&lCW Editor"
-    
-  mainSettingsItem:
-    name: "&3Main Settings"
-    material: CRAFTING_TABLE
-    slot: 53
-
+      lore:
+        - "&7Current filter: Show only the wings you cannot use"
