Added page support for the Wing select menu

--- a/src/main/resources/wings/frost.yml
+++ b/src/main/resources/wings/frost.yml
@@ -12,6 +12,7 @@ menuItem:
   name: "&bFrost Wing"
   material: DIAMOND
   slot: 1
+  page: 1
   loreWhenEquipped: 
     - "&6You have the &bFrost Wing &6equipped"
   loreWhenUnequipped:
