Particles and Particle selection menu fix

--- a/src/main/resources/wings/soulshadow.yml
+++ b/src/main/resources/wings/soulshadow.yml
@@ -96,6 +96,7 @@ wing:
         # BARRIER, BLOCK_CRACK, BLOCK_DUST,BUBBLE_COLUMN_UP, BUBBLE_POP, CLOUD, CRIT, CRIT_MAGIC, CURRENT_DOWN, DAMAGE_INDICATOR, DOLPHIN, DRAGON_BREATH, DRIP_LAVA, DRIP_WATER, ENCHANTMENT_TABLE, END_ROD, EXPLOSION_HUGE, EXPLOSION_LARGE
         # EXPLOSION_NORMAL, FALLING_DUST, FIREWORKS_SPARK, FLAME, HEART, ITEM_CRACK, LAVA, LEGACY_BLOCK_CRACK, LEGACY_BLOCK_DUST, LEGACY_FALLING_DUST, MOB_APPEARANCE, NAUTILUS, NOTE, PORTAL, REDSTONE, SLIME, SMOKE_LARGE, SMOKE_NORMAL, SNOW_SHOVEL
         # SNOWBALL, SPELL, SPELL_INSTANT, SPELL_MOB, SPELL_MOB_AMBIENT, SPELL_WITCH, SPIT, SQUID_INK, SUSPENDED, SUSPENDED_DEPTH, SWEEP_ATTACK, TOTEM, TOWN_AURA, VILLAGER_ANGRY, VILLAGER_HAPPY, WATER_BUBBLE, WATER_DROP, WATER_SPLASH, WATER_WAKE
+        # And more depending wich Minecraft version you are using.
 
         particle: "CRIT_MAGIC"
 
