--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tigeax.customwings</groupId>
     <artifactId>CustomWings</artifactId>
-    <version>4.2.0.dev</version>
+    <version>4.2.0.dev.2</version>
     <packaging>jar</packaging>
 
     <name>CustomWings</name>
